tests/paczka1/fuzzy1/70243851.err
Error in line 3: s0lUU06dd A375 23,3
Error in line 24: s0lUU06dd A375 10,53
Error in line 25: s0lUU06dd A375 20,1
Error in line 22: S516 S516 80,2
Error in line 28: yqv9H S516 14,8
